[package]
name = "is-prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5.1", features = ["tokio", "smol"] }
itertools = "0.10.5"
rayon = "1.7.0"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
smallvec = "1.10.0"
smol = "1.3.0"
tokio = "1.28.2"

[[bench]]
name = "is_prime"
harness = false
path = "benches/benchmark.rs"
