[package]
name = "is-prime"
version = "0.1.0"
edition = "2021"
description = "A simple crate to check if a number is prime"
repository = "https://github.com/notgull/is-prime"
license = "MIT OR BSL-1.0 OR Apache-2.0 OR BSD-2-Clause OR BSD-3-Clause OR BSD-0-Clause OR GPL-v3.0-only OR ISC OR WTFPL or Zlib"

[dependencies]
criterion = { version = "0.5.1", features = ["tokio", "smol"] }
itertools = "0.10.5"
rayon = "1.7.0"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
smallvec = "1.10.0"
smol = "1.3.0"
tokio = "1.28.2"

[[bench]]
name = "is_prime"
harness = false
path = "benches/benchmark.rs"
